--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <title>HTML Images</title>
 </head>
 <body>
-
-  <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion image" title="lion image">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion image" title="lion image">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion image" title="lion image">
 
 </body>
 </html>
